First stable version

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <p>Welcome to your Electron application.</p>
     <div>
       <input id="files" type="file" webkitdirectory directory multiple>
-      <button onclick="createDir()">click</button>
+      <button id="submit-organizer" >click</button>
     </div>
     <script src="renderer.js"></script>
   </body>
