add success message

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
         </label>
       </div>
       <button id="submit-organizer" class="button is-primary" >Submit</button>
+      <div class="success-message is-invisible level is-justify-content-center mt-2 has-text-primary">
+        <p>Files arrangement complete</p>
+      </div>
     </div>
     <script src="renderer.js"></script>
   </body>
